# rm_sentry

./: .gitignore  AGENTS.md  README.md
docs/: agent_bootstrap.md  file_inventory.md  height_gated_traversability_plan.md  index.md  robotics_project_documentation_methodology.md
docs/architecture/: runtime_flows.md
docs/archive/: README.md  deprecated_implementations.md
docs/current/: active_legacy.md  active_pipeline.md  agent_bootstrap.md  architecture.md  bringup.md  dataflow_and_frames.md  plan.md  project_state.md  system_overview.md
docs/decisions/: ADR-001-nav2-to-jps-minco.md  ADR-002-drop-3d-rog.md  ADR-003-static-prior-map.md  ADR-004-traj-tracker.md  navigation_decisions.md
docs/evidence/: README.md  runs_index.md
docs/evidence/templates/: agent_readable_summary.md  human_observation.md  metadata.md  metrics.csv  params_snapshot.yaml
docs/history/: README.md  index_by_module.md  index_by_symptom.md  timeline.md
docs/history/bugs/: BUG-template.md
docs/history/decisions/: ADR-template.md  navigation_decisions.md
docs/modules/: README.md  costmap_inflation.md  esdf2d.md  fastlio2.md  gazebo_chassis.md  jps.md  minco.md  module_card_template.md  relocalization.md  traj_tracker.md  traversability_map.md
docs/reference/: active_legacy.md  interfaces.md  parameters.md
docs/runbooks/: bringup.md  debug_control.md  debug_planning.md
docs/testbook/: control_validation.md  localization_validation.md  mapping_validation.md  planning_validation.md  system_validation.md
scripts/: diag_costmap.py  diag_costmap_quick.py  diag_density.py  diag_hits.py  diag_zhist.py
src/pb_rm_simulation/: README.md
src/pb_rm_simulation/src/rm_nav_bringup/: CMakeLists.txt
src/pb_rm_simulation/src/rm_nav_bringup/config/simulation/: fastlio_mid360_sim.yaml  measurement_params_sim.yaml
src/pb_rm_simulation/src/rm_nav_bringup/launch/: bringup_sim.launch.py  sim_perception.launch.py
src/pb_rm_simulation/src/rm_nav_bringup/rviz/: sim_perception.rviz
src/pb_rm_simulation/src/rm_nav_bringup/urdf/: sentry_robot_sim.xacro
src/pb_rm_simulation/src/rm_simulation/livox_laser_simulation_RO2/urdf/: mid360.xacro
src/pb_rm_simulation/src/rm_simulation/pb_rm_simulation/: package.xml
src/pb_rm_simulation/src/rm_simulation/pb_rm_simulation/launch/: rm_simulation.launch.py
src/pb_rm_simulation/src/rm_simulation/pb_rm_simulation/urdf/: simulation_waking_robot.xacro
src/pb_rm_simulation/src/rm_simulation/pb_rm_simulation/world/RM3V3/: rm3v3_sym_v1.world
src/sentry_controller/: package.xml  setup.cfg  setup.py
src/sentry_controller/sentry_controller/: goal_controller.py  keyboard_teleop.py  path_tracker.py  traj_tracker.py
src/sentry_mapping/: CMakeLists.txt  package.xml
src/sentry_mapping/config/: rog_map_sentry.yaml
src/sentry_mapping/launch/: mapping.launch.py  replay_mapping.launch.py
src/sentry_mapping/rviz/: mapping.rviz
src/sentry_mapping/src/: perception_mapper_node.cpp  traversability_mapper_node.cpp
src/sentry_perception/: README.md  package.xml  setup.cfg  setup.py
src/sentry_perception/config/: cluster_detector.yaml  obstacle_detector.yaml
src/sentry_perception/launch/: perception.launch.py  replay_perception.launch.py
src/sentry_perception/rviz/: perception.rviz
src/sentry_perception/sentry_perception/: cluster_detector_node.py  esdf2d_node.py  obstacle_detector_node.py  relocalization_node.py
src/sentry_planner/: package.xml  setup.cfg  setup.py
src/sentry_planner/launch/: sim_planner.launch.py
src/sentry_planner/sentry_planner/: costmap_inflator.py  esdf_grad_viz.py  esdf_map_2d.py  jps_node.py  minco_planner_node.py  minco_solver_2d.py  path_postprocess.py
tools/: generate_3v3_sdf.py
